# cppclient-rest

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
doc/: CMakeLists.txt  Doxyfile.in
include/cppclient/: connection.hh  cppclient.hh  helper.hh  response.hh
src/: CMakeLists.txt  connection.cc  helper.cc  response.cc
test/: CMakeLists.txt  auth_test.cc  connection_test.cc  error_test.cc  json_test.cc  listener.cc  main.cc  server.py
